# rust-aichat-service

./: .gitignore  Cargo.toml  Makefile  README.md
config/: config-test.json  config.json
scripts/: test.sh  wrig-jira.sh
src/: main.rs
src/chat/: client.rs  model.rs  process.rs
src/cli/: schema.rs
src/prompt/: parser.rs
src/service/: execute.rs
src/stt/: process.rs
