[package]
name = "rust-aichat-service"
version = "0.2.6"
edition = "2024"
authors = ["Luigi Mario Zuccarelli<>luigizuccarelli@gmail.com"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"
async-trait = "0.1.89"
futures-util = "0.3.31"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
