[package]
name = "rust-aichat-service"
version = "0.4.9"
edition = "2024"
authors = ["Luigi Mario Zuccarelli<>luigizuccarelli@gmail.com"]

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
custom-logger = { git = "https://github.com/lmzuccarelli/rust-custom-logger", branch = "main", version = "0.2.0" }
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"
async-trait = "0.1.89"
futures-util = "0.3.31"
futures = "0.3.31"
reqwest = { version = "0.12.24", features = ["json"] }
audio = "0.2.1"
bytes = "1.10.1"
cpal = "0.16.0"
crossbeam = "0.8.4"
deepgram = "0.7.0"
walkdir = "2.5.0"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link-time optimization
codegen-units = 1 # Mazimize size reduction optimization
